# whale_watcher_server

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20211203180649_create_whale_table.sql  20211204201417_drop_holders_table_create_addresses_table.sql  20211204215308_create_token_address_tables.sql  20211204220334_create_interesection_address_token_name_table.sql  20211205165050_change_networks_column_name.sql  20211206193000_drop_all_tables.sql  20211206195036_readd_tables.sql  20211206232024_creating_transaction_tables.sql  20211208025806_change_holder_columns.sql  20211208141415_alter_holder_totals_contract_address_constraint.sql  20211215144024_add_status_to_subscriptions.sql  20211215161235_drop_null_constraints_on_notes_entries.sql  20211218162150_rename_legit_token_fields.sql  20220116003619_holder_descriptions.sql  20220117155324_changing_address_types_column.sql  20220120150730_moving_scams_and_legit_creators_to_holder_descriptions.sql  databases.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: address.rs  address_info.rs  address_type.rs  condition.rs  email.rs  holder_description.rs  holder_total.rs  holder_totals.rs  legit_token_creator.rs  mod.rs  network.rs  new_subscriber.rs  notes.rs  scam_creator.rs  scam_token.rs  scam_type.rs  scammer_query.rs  subscriber_name.rs  token_creator_query.rs  token_name.rs
src/routes/: holder_description.rs  holders.rs  legit_token_creator.rs  (+6 more)
tests/: health_check.rs
(+10 files in other folders)
