[package]
name = "whale_watcher_server"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whale_watcher_server"

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1", features = ["derive"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
