[package]
name = "whale_watcher_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whale_watcher_server"

[dependencies]
actix-web = "4.0.0-beta.13"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.2"
bigdecimal = { version = "0.2", features = ["serde"] }
tracing-actix-web = "0.5.0-beta.4"
serde-aux = "3.0.1"
log = "0.4"
unicode-segmentation = "1.8.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
    "offline",
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1.8.0"
reqwest = "0.11"
tokio = "1"
